[package]
name = "tanque-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config-rs = "0.1.3"
dotenvy = "0.15.7"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
