[package]
name = "tanque-website"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
serial_test = "3.1.1"
